// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ControlledMenuItem /> renders a MenuItem properly 1`] = `
.emotion-11 {
  font-family: Motiva Sans;
  font-size: 0.875rem;
  padding: 0.75rem;
  box-sizing: border-box;
  background: #FFFFFF;
  color: #25272D;
  cursor: pointer;
}

.emotion-11:hover,
.emotion-11:focus {
  background: #F8F9F9;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-9 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  font-family: Motiva Sans;
  max-width: calc(100% - 120px - 8px);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: 0.875rem;
  line-height: 1.25;
  min-width: 120px;
  overflow: hidden;
}

.emotion-7 {
  font-family: Motiva Sans;
  overflow: hidden;
  padding-left: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-5 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
  line-height: 1.25;
  max-width: 100%;
  line-height: 0.875rem;
}

<div
  aria-selected={false}
  className="emotion-11 emotion-12"
  fontSize="size4"
  id="menu-item_clearance_state_ready_to_clear"
  label="Ready to Clear"
  name="clearance_state"
  onClick={[Function]}
  onKeyPress={[Function]}
  onSelect={[Function]}
  role="option"
  value="ready_to_clear"
>
  <input
    className="emotion-0"
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <div
    className="emotion-9 emotion-4"
    width="100%"
  >
    <div
      className="emotion-3 emotion-4"
    >
      <span
        className="emotion-1 emotion-2"
        color="inherit"
        fontSize="size4"
        overflow="hidden"
      >
        Ready to Clear
      </span>
    </div>
    <div
      className="emotion-7 emotion-4"
      overflow="hidden"
    >
      <span
        className="emotion-5 emotion-2"
        color="text.muted"
        fontSize="size3"
      >
        mpd@catchandrelease.com
      </span>
    </div>
  </div>
</div>
`;

exports[`<ControlledMenuItem /> renders a selected MenuItem properly 1`] = `
.emotion-11 {
  font-family: Motiva Sans;
  font-size: 0.875rem;
  padding: 0.75rem;
  box-sizing: border-box;
  background: #FFFFFF;
  color: #25272D;
  cursor: pointer;
}

.emotion-11:hover,
.emotion-11:focus {
  background: #F8F9F9;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-9 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  font-family: Motiva Sans;
  max-width: calc(100% - 120px - 8px);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: 0.875rem;
  line-height: 1.25;
  min-width: 120px;
  overflow: hidden;
}

.emotion-7 {
  font-family: Motiva Sans;
  overflow: hidden;
  padding-left: 8px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-5 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
  line-height: 1.25;
  max-width: 100%;
  line-height: 0.875rem;
}

<div
  aria-selected={false}
  className="emotion-11 emotion-12"
  fontSize="size4"
  id="menu-item_clearance_state_ready_to_clear"
  label="Ready to Clear"
  name="clearance_state"
  onClick={[Function]}
  onKeyPress={[Function]}
  onSelect={[Function]}
  role="option"
  selected={true}
  value="ready_to_clear"
>
  <input
    className="emotion-0"
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <div
    className="emotion-9 emotion-4"
    width="100%"
  >
    <div
      className="emotion-3 emotion-4"
    >
      <span
        className="emotion-1 emotion-2"
        color="inherit"
        fontSize="size4"
        overflow="hidden"
      >
        Ready to Clear
      </span>
    </div>
    <div
      className="emotion-7 emotion-4"
      overflow="hidden"
    >
      <span
        className="emotion-5 emotion-2"
        color="text.muted"
        fontSize="size3"
      >
        mpd@catchandrelease.com
      </span>
    </div>
  </div>
</div>
`;
